# home-prefect

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  home-prefect.code-workspace  palantiri.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.dev.yml
docker/: Dockerfile.server  Dockerfile.worker  docker-compose.yml
docs/: minio.md
scripts/: create-work-pool.sh  deploy-flows.sh  start-stack.sh
src/home_prefect/: __init__.py
src/home_prefect/config/: __init__.py  settings.py
src/home_prefect/deployments/: __init__.py  docker_compose.py  docker_compose_depl.py  network.py  network_depl.py
src/home_prefect/flows/: __init__.py  docker_compose.py  docker_compose_flows.py  network_health.py  network_health_flows.py
src/home_prefect/tasks/: docker.py  docker_tasks.py  network_tasks.py
tests/: test_flows.py  test_settings.py
